Change log for zeit.web
=======================

2.12 (unreleased)
-----------------

- ZON-2304: More metrics
  * Add hostname and content-type+view-name to request timing metric names
  * Add timing metrics to our external HTTP requests
  * Add timing metrics for solr


2.11 (2015-10-07)
-----------------

- ZON-2286: Add back to home button to articles

- ZON-2242: Change fonts URL to something like ``/.../latest/fonts`` instead of
  ``/.../2.9/fonts`` for better client cacheability

- ZON-2138: Change servicebox link headhunter (main part was mercurial commit)

- ZON-2301: fix/adjust date_last_modified for HP

- ZON-1984: Storystream follow-up/cleanup

- FIX: Be more defensive in several places (resolving uniqueIds, empty
  properties etc.)


2.10.1 (2015-10-02)
-----------------

- HOTFIX: Use image_host for newsfeed image URLs


2.10 (2015-10-02)
-----------------

- ZON-1936: Change bottom separator color in Spektrum parquet area

- HOTFIX: Repair old IE css reference

- ZON-2115: Antidote for keyword and topicpage special rules


2.9.2 (2015-10-01)
------------------

- HOTFIX: Fix annoying updated homepage refresh popover


2.9.1 (2015-10-01)
------------------

- ZON-2242: Remove cache-busting slug from font URLs

- OPS-239: Make newsfeed caching header configurable

- MAINT: Decrease timeout for login requests


2.9 (2015-10-01)
----------------

- ZON-2242: Globally configure image, asset and jsconf hosts

- MAINT: Add tests and more tracking to popover


2.8.2 (2015-09-30)
------------------

- FIX: Be more defensive in several places (byline, missing meta files, broken
  references etc.)


2.8.1 (2015-09-30)
------------------

- ZON-2262: Respect image expiration dates in cache-control headers

- ZON-2262: Do not include expired images in rendered pages

- FIX: Check for ICommonMetadata when building feed

- FIX: Add pagination to Advertorials


2.8 (2015-09-29)
----------------

- ZON-2281: Add full link to TOP link
