@@ -6,8 +6,9 @@ Change log for zeit.web
 
 - ZON-2304: More metrics
   * Add hostname and content-type+view-name to request timing metric names
-  * Add timing metrics to our external HTTP requests
+  * Add timing metrics for our external HTTP requests
   * Add timing metrics for solr
+  * Add timing metrics for memcache
 
 
 2.11 (2015-10-07)
